<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.ugcs</groupId>
    <artifactId>geohammer</artifactId>
    <packaging>jar</packaging>
    <version>1.1.8-SNAPSHOT</version>
    <name>UgCS GeoHammer</name>
    <url>https://github.com/ugsc/geohammer</url>
    <description>UgCS GeoHammer</description>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven.compiler.release>21</maven.compiler.release>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>

		<checkstyle.version>8.32</checkstyle.version>
		<checkstyle.plugin.version>3.1.1</checkstyle.plugin.version>
		<sevntu.checkstyle.plugin.version>1.37.1</sevntu.checkstyle.plugin.version>

		<gt.version>22.2</gt.version>
		
		<!-- Default values. These should be overloaded by profile choice -->
		<platform.suffix>windows-x86_64</platform.suffix>
        <zip.content>src/main/assembly/zip.xml</zip.content>

		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
		<build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
		<launch4j-maven-plugin.version>2.4.1</launch4j-maven-plugin.version>

	</properties>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<parameters>true</parameters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${checkstyle.plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>${checkstyle.version}</version>
					</dependency>
					<dependency>
						<groupId>com.github.sevntu-checkstyle</groupId>
						<artifactId>sevntu-checks</artifactId>
						<version>${sevntu.checkstyle.plugin.version}</version>
					</dependency>
				</dependencies>
				<!-- https://maven.apache.org/plugins/maven-checkstyle-plugin/checkstyle-mojo.html -->
				<!-- Properties for "mvn checkstyle:checkstyle" to execute without mvn 
					build -->
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<consoleOutput>false</consoleOutput>
					<failsOnError>false</failsOnError>
					<!-- linkXRef=false to avoid WARNING 'Unable to locate Source XRef to 
						link to' -->
					<linkXRef>false</linkXRef>
				</configuration>
			</plugin>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven-assembly-plugin.version}</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>com.ugcs.gprvisualizer.app.MainGeoHammer</mainClass>
						</manifest>
						<manifestEntries>
							<SplashScreen-Image>splash_screen.png</SplashScreen-Image>
          				</manifestEntries>
					</archive>
				</configuration>
				<executions>
					<!-- jar -->
					<execution>
						<id>assemble-all</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
					<!-- zip -->
					<execution>
						<phase>install</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}_${project.version}_${platform.suffix}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>${zip.content}</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Java FX module support -->
		    <plugin>
		        <groupId>org.openjfx</groupId>
		        <artifactId>javafx-maven-plugin</artifactId>
		        <version>0.0.1</version>
		        <configuration>
		            <mainClass>MainGeoHammer.app.gprvisualizer.ugcs.com</mainClass>
		        </configuration>
		    </plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>centr</id>
			<name>central</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>repo1</id>
			<name>Repo 1</name>
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
	</repositories>
	
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.21</version>
		</dependency>

		<dependency>
			<groupId>gov.nist.math</groupId>
			<artifactId>jama</artifactId>
			<version>1.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
			<!-- compile time dependency is necessary for URL building -->
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>5.3.27</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>5.3.27</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-imaging</artifactId>
			<version>1.0-alpha1</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/de.micromata.jak/JavaAPIforKml -->
		<dependency>
			<groupId>de.micromata.jak</groupId>
			<artifactId>JavaAPIforKml</artifactId>
			<version>2.2.0</version>
		</dependency>


		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-javafx</artifactId>
			<version>5.0</version>
		</dependency>

		<dependency>
		    <groupId>com.opencsv</groupId>
		    <artifactId>opencsv</artifactId>
		    <version>5.9</version>
		</dependency>
		
	</dependencies>



	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>windows-build</id>
			<properties>
        		<platform.suffix>windows-x86_64</platform.suffix>
        		<zip.content>src/main/assembly/zip.xml</zip.content>
      		</properties>
       		<!-- exe -->
       		<build>
	       		<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<version>${build-helper-maven-plugin.version}</version>
						<executions>
							<execution>
								<id>parse-version</id>
								<goals>
									<goal>parse-version</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
					  <groupId>com.akathist.maven.plugins.launch4j</groupId>
					  <artifactId>launch4j-maven-plugin</artifactId>
					  <version>${launch4j-maven-plugin.version}</version>
					  <executions>
						<execution>
							<id>l4j-gui</id>
							<phase>package</phase>
							<goals><goal>launch4j</goal></goals>
							<configuration>
							<dontWrapJar>false</dontWrapJar>
							<headerType>gui</headerType>
							<jar>${project.build.directory}/${project.artifactId}-jar-with-dependencies.jar</jar>
							<outfile>${project.build.directory}/${project.artifactId}.exe</outfile>
							<errTitle>${project.artifactId}</errTitle>
							<classPath>
							<mainClass>com.ugcs.gprvisualizer.app.MainGeoHammer</mainClass>
							<addDependencies>false</addDependencies>
							</classPath>
							<jre>
								<minVersion>1.17.0</minVersion>
								<path>jre17</path>
							</jre>
							<versionInfo>
								<fileVersion>1.0.0.0</fileVersion>
								<txtFileVersion>${project.version}</txtFileVersion>
								<fileDescription>UgCS GeoHammer</fileDescription>
								<copyright>SPH Engeneering 2022</copyright>
								<productVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.0</productVersion>
								<txtProductVersion>${project.version}</txtProductVersion>
								<productName>GeoHammer</productName>
								<internalName>geohammer</internalName>
								<originalFilename>geohammer.exe</originalFilename>
							</versionInfo>
							<splash>
								<file>${project.basedir}/src/main/assembly/splash_screen.bmp</file>
								<waitForWindow>true</waitForWindow>
								<timeout>60</timeout>
								<timeoutErr>true</timeoutErr>
							</splash>
						  </configuration>
						</execution>
					  </executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>linux-build</id>
			<properties>
        		<platform.suffix>linux-x86_64</platform.suffix>
        		<zip.content>src/main/assembly/unix-zip.xml</zip.content>
      		</properties>
      	</profile>
		<profile>
			<id>macos-build</id>
			<properties>
        		<platform.suffix>macos-x86_64</platform.suffix>
        		<zip.content>src/main/assembly/unix-zip.xml</zip.content>
      		</properties>
      	</profile>
	</profiles>

</project>
